tests/programs/invalid/test_volatile.java
public class test_volatile {
    public volatile int x;
}